--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,6 +3,12 @@
 @tailwind utilities;
 
 @layer base {
+  body{
+    @apply bg-[rgb(241,239,238)]
+  }
+.card{
+    @apply bg-white rounded-lg shadow;
+  }
   input {
     @apply w-full px-3 py-1 border border-gray-300 rounded-md shadow-sm focus:outline-none
   }
